<resources>
    <string name="app_name">ReSupply</string>

    <string name="welcome">Welcome to</string>
    <string name="login_title">LOGIN</string>
    <string name="email_hint">E-mail</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="forgot_password_text_field">Forgot Password?</string>
    <string name="email_password_do_not_match">E-mail and Password do not match</string>

    <string name="continue_facebook">Continue with Facebook</string>
    <string name="register_email">Register with E-mail</string>

    <string name="enter_email">Enter your E-mail below, and we\'ll send you a link to reset your password</string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="submit">Submit</string>

    <string name="register_title">REGISTER</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="register_button">Register</string>


    <string name="ratings">Ratings</string>


    <string name="email_matcher">^[A-Z0-9._%+-]+@[A-Z0-9.-]+\.[A-Z]{2,6}$</string>
    <string name="option_unavailable">Sorry, this option is currently unavailable.</string>
    <string name="please_wait">Please wait...</string>


    <string name="message">Message</string>
    <string name="name">name</string>
    <string name="default_ratings_text">17 Ratings  |  4.5</string>
    <string name="accepting">Accepting</string>
    <string name="furniture">Furniture</string>
    <string name="clothes">Clothes</string>
    <string name="electronics">Electronics</string>
    <string name="household">Household</string>
    <string name="books">Books</string>
    <string name="misc">Misc.</string>
    <string name="appliances">Appliances.</string>
    <string name="donate">donate</string>
    <string name="pick_a_charity">pick a charity</string>
    <string name="logout">logout</string>

    <string name="enter_zip_hint">Enter zip code</string>
    <string name="donate_capitalized">Donate</string>
    <string name="my_donations">My Donations</string>
    <string name="inbox">Inbox</string>
    <string name="profile">Profile</string>










</resources>
