<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraintLayoutLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgBlue"
    android:padding="0dp"
    android:visibility="visible">

    <TextView
        android:id="@+id/textViewWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/brown_regular"
        android:text="@string/welcome"
        android:textColor="@android:color/white"
        android:textSize="@dimen/normal_font_size"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/imageViewLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="183dp"
        android:layout_height="86dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:importantForAccessibility="no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/resupply_logo_03" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardViewLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/double_button_margin"
        android:layout_marginEnd="@dimen/button_margin"
        android:layout_marginStart="@dimen/button_margin"
        app:cardCornerRadius="@dimen/border_radius"
        app:cardElevation="@dimen/elevation"
        app:layout_constraintBottom_toTopOf="@+id/cardViewContinueWithFacebook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/button_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewRegister"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/button_margin"
                    android:layout_marginTop="@dimen/button_margin"
                    android:layout_weight="1"
                    android:fontFamily="@font/brown_regular"
                    android:text="@string/register_title"
                    android:textColor="@color/darkGray"
                    android:textSize="@dimen/large_font_size"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editTextFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginBottom="@dimen/button_margin"
                    android:layout_marginEnd="@dimen/button_margin"
                    android:layout_weight="1"
                    android:background="@drawable/border_radius_rectangle"
                    android:backgroundTint="@color/almostWhite"
                    android:ems="10"
                    android:hint="@string/first_name_hint"
                    android:inputType="textPersonName"
                    android:padding="@dimen/button_margin"
                    android:textColor="@color/darkGray"
                    android:textColorHint="@color/lightGray" />

                <EditText
                    android:id="@+id/editTextLastName"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button_height"
                    android:layout_marginBottom="@dimen/button_margin"
                    android:layout_weight="1"
                    android:background="@drawable/border_radius_rectangle"
                    android:backgroundTint="@color/almostWhite"
                    android:ems="10"
                    android:hint="@string/last_name_hint"
                    android:inputType="textPersonName"
                    android:padding="@dimen/button_margin"
                    android:textColor="@color/darkGray"
                    android:textColorHint="@color/lightGray" />
            </LinearLayout>

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginBottom="@dimen/button_margin"
                android:background="@drawable/border_radius_rectangle"
                android:backgroundTint="@color/almostWhite"
                android:ems="10"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:padding="@dimen/button_margin"
                android:textColor="@color/darkGray"
                android:textColorHint="@color/lightGray" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginBottom="@dimen/button_margin"
                android:background="@drawable/border_radius_rectangle"
                android:backgroundTint="@color/almostWhite"
                android:ems="10"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:padding="@dimen/button_margin"
                android:textColor="@color/darkGray"
                android:textColorHint="@color/lightGray" />

            <EditText
                android:id="@+id/editTextConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginBottom="@dimen/button_margin"
                android:background="@drawable/border_radius_rectangle"
                android:backgroundTint="@color/almostWhite"
                android:ems="10"
                android:hint="@string/confirm_password_hint"
                android:inputType="textPassword"
                android:padding="@dimen/button_margin"
                android:textColor="@color/darkGray"
                android:textColorHint="@color/lightGray" />

            <android.support.v7.widget.CardView
                android:id="@+id/cardViewRegisterButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:layout_marginBottom="@dimen/button_margin"
                android:elevation="@dimen/elevation"
                app:cardCornerRadius="@dimen/border_radius">

                <Button
                    android:id="@+id/buttonRegister"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/bgBlue"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:text="@string/register_button"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/normal_font_size" />
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardViewContinueWithFacebook"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginBottom="@dimen/double_button_margin"
        android:layout_marginEnd="@dimen/button_margin"
        android:layout_marginStart="@dimen/button_margin"
        android:paddingEnd="@dimen/double_button_margin"
        android:paddingStart="@dimen/double_button_margin"
        app:cardCornerRadius="@dimen/border_radius"
        app:cardElevation="@dimen/elevation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/cardViewLogin"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/cardViewLogin">

        <Button
            android:id="@+id/buttonContinueWithFacebook"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/denimBlue"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/continue_facebook"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/normal_font_size"
            android:textStyle="normal"
            android:visibility="visible" />
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>