<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:id="@+id/constraintLayoutLogin"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/bgBlue"
android:padding="0dp"
android:visibility="visible">

    <TextView
        android:id="@+id/textViewWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/brown_regular"
        android:text="@string/welcome"
        android:textColor="@android:color/white"
        android:textSize="@dimen/normal_font_size"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/imageViewLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

<ImageView
    android:id="@+id/imageViewLogo"
    android:layout_width="183dp"
    android:layout_height="86dp"
    android:layout_marginBottom="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.5"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.078"
    android:importantForAccessibility="no"
    app:srcCompat="@drawable/resupply_logo_03" />

<android.support.v7.widget.CardView
    android:id="@+id/cardViewForgotPassword"
    android:layout_width="343dp"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/triple_button_height"
    android:layout_marginEnd="@dimen/button_margin"
    android:layout_marginStart="@dimen/button_margin"
    app:cardCornerRadius="@dimen/border_radius"
    app:cardElevation="@dimen/elevation"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.4"
    app:layout_constraintStart_toStartOf="parent">

    <LinearLayout
        android:layout_width="332dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/button_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/button_margin"
                android:layout_marginTop="@dimen/button_margin"
                android:layout_weight="1"
                android:fontFamily="@font/brown_regular"
                android:text="@string/forgot_password_title"
                android:textColor="@color/darkGray"
                android:textSize="@dimen/large_font_size"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/textViewForgotPasswordMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/button_margin"
            android:text="@string/enter_email"
            android:textSize="@dimen/normal_font_size" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginBottom="@dimen/button_margin"
            android:background="@drawable/border_radius_rectangle"
            android:backgroundTint="@color/almostWhite"
            android:ems="10"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:padding="@dimen/button_margin" />

        <android.support.v7.widget.CardView
            android:id="@+id/cardViewSubmitButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginBottom="@dimen/button_margin"
            android:clickable="true"
            android:focusable="true"
            android:elevation="@dimen/elevation"
            app:cardCornerRadius="@dimen/border_radius">

            <Button
                android:id="@+id/buttonSubmit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/bgBlue"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="@dimen/normal_font_size" />
        </android.support.v7.widget.CardView>

    </LinearLayout>
</android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>